# atom

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  atom.sln
atom/: Entity.cpp  Entity.hpp  Map.cpp  Map.hpp  Raycasting.cpp  Raycasting.hpp  Render.cpp  Render.hpp  Surface.cpp  Surface.hpp  Test.h  TextureManager.cpp  TextureManager.hpp  atom.sln  atom.vcxproj  atom.vcxproj.filters  main.cpp
atom/Debug/: vc143.idb
atom/Debug/atom.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  atom.lastbuildstate
atom/atom/: atom.vcxproj  main.cpp
atom/atom/Debug/: atom.exe.recipe  atom.ilk  vc143.idb
atom/atom/Debug/atom.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  atom.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
atom/atom/x64/Debug/: atom.exe.recipe  atom.ilk  vc143.idb
atom/atom/x64/Debug/atom.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  atom.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
atom/include/: Calculator.h  Line.h  Render.hpp  Structs.hpp  Surface.hpp  TextureManager.hpp  utils.h
atom/src/: Entity.cpp  Map.cpp  Raycasting.cpp  Render.cpp  Surface.cpp  main.cpp
atom/x64/Debug/: atom.exe.recipe  atom.ilk  raycasting.obj.enc  vc143.idb
atom/x64/Debug/atom.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  atom.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Raycasting.hpp  Render.hpp  TextureManager.hpp
src/: Raycasting.cpp  main.cpp
